--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -32,6 +32,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:maxLines="1"
             android:layout_toRightOf="@+id/ic_magnify"
             android:layout_centerVertical="true"
             android:textSize="15sp"
@@ -39,7 +40,8 @@
             android:id="@+id/input_search"
             android:background="@null"
             android:hint="Enter Address, City or Zip Code"
-            android:imeOptions="actionSearch"/>
+            android:imeOptions="actionSearch"
+            android:inputType="text"/>
 
 
     </RelativeLayout>
